--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="https://raw.githubusercontent.com/Siva-Tejaa/Projects-Data/main/ibommaicon.png" />
+    <link rel="icon" href="../src/images/iBommaIcon.png" />
     <title>iBOMMA</title>
   </head>
   <body>
