ibomma updated new

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#5DA93C" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="iBomma - Movie Details Application developed using React Js"
     />
     <link rel="icon" href="../src/images/iBommaIcon.png" />
     <title>iBOMMA</title>
